test/Programs/InvalidTests/branchOnExternalChoice/branchOnExternalChoice.fst
f : +{A: Skip} -> Int
f c = match c with {A _ -> 5}

main : Int
main = 5
